k8s/auth-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: chat-app
spec:
  selector:
    app: auth-service
  ports:
  - port: 5001
    targetPort: 5001
  type: ClusterIP
