k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-app
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 5001
    targetPort: 5001
    protocol: TCP
