k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chat-app
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
