k8s/message-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: message-service
  namespace: chat-app
spec:
  selector:
    app: message-service
  ports:
  - port: 5003
    targetPort: 5003
  type: ClusterIP
