k8s/socket-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: socket-service
  namespace: chat-app
spec:
  selector:
    app: socket-service
  ports:
  - port: 5004
    targetPort: 5004
  type: ClusterIP
