k8s/user-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: chat-app
spec:
  selector:
    app: user-service
  ports:
  - port: 5002
    targetPort: 5002
  type: ClusterIP
