k8s/socket-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-service-ingress
  namespace: chat-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - host: chat-tws.com
    http:
      paths:
      - pathType: Prefix
        path: "/socket.io"
        backend:
          service:
            name: socket-service
            port: 
              number: 5004
